adição de espaço extra

--- a/Algoritmos de Apredizagem/kmeans_boston.ipynb
+++ b/Algoritmos de Apredizagem/kmeans_boston.ipynb
@@ -1043,7 +1043,7 @@
    "metadata": {},
    "source": [
     "**Conclusão:** <br/>\n",
-    "Apesar de não ter uma métrica para avaliar se os resultados foram bons, a olho nú é possível perceber que, apesar dos pontos de alguns dos clusters estarem um pouco distantes do seu grupo, os pontos definidos como centros (em verde), está em uma região considerada central para o seu cluster.\n",
+    "Apesar de não ter uma métrica para avaliar se os resultados foram bons, a olho nú é possível perceber que, apesar dos pontos de alguns dos clusters estarem um pouco distantes do seu grupo, os pontos definidos como centros (em verde), está em uma região considerada central para o seu cluster. <br/><br/>\n",
     "**Referências:** <br/>\n",
     "http://www.diegonogare.net/2015/08/entendendo-como-funciona-o-algoritmo-de-cluster-k-means/ <br/>\n",
     "https://github.com/ExcViral/K-Means-Clustering/blob/master/k-means.py"
