--- a/regressao_logistica_multiclass.ipynb
+++ b/regressao_logistica_multiclass.ipynb
@@ -32,7 +32,7 @@
         "id": "-KJ4v1jm1f74"
       },
       "source": [
-        "# Regressão Logística\n",
+        "# Regressão Logística (multinomial)\n",
         "\n",
         "---\n",
         "Instituto Federal do Norte de Minas Gerais Campus Montes Claros <br/>\n",
@@ -45,9 +45,9 @@
         "\n",
         "---\n",
         "\n",
-        "A regressão logística é usada em problemas de classificação binária com os quais o objetivo é separar previsões em duas classes distintas com base em um limite de probabilidade.\n",
+        "A regressão logística é usada em problemas de classificação binária ou multiclasses com os quais o objetivo é separar previsões em classes distintas com base em um limite de probabilidade.\n",
         "\n",
-        "Base de dados: Wine do Python\n",
+        "Base de dados: https://archive.ics.uci.edu/ml/datasets/wine\n",
         "\n"
       ]
     },
